Bug 1003943 - Properly update widget cursors when the mouse passes between remote frames. r=smaug